--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
   "dependencies": {
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor/camera": "^4.1.4",
     "@ionic/angular": "^6.1.9",
+    "@ionic/pwa-elements": "^3.1.1",
+    "angular": "^1.8.3",
+    "firebase": "^9.16.0",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
