--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#b7f5e2",
-        "activityBar.background": "#b7f5e2",
+        "activityBar.activeBackground": "#9fa4ce",
+        "activityBar.background": "#9fa4ce",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#c773ec",
+        "activityBarBadge.background": "#f4eaeb",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#b7f5e2",
-        "statusBar.background": "#8aefd0",
+        "sash.hoverBorder": "#9fa4ce",
+        "statusBar.background": "#7d84bd",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#5de9be",
-        "statusBarItem.remoteBackground": "#8aefd0",
+        "statusBarItem.hoverBackground": "#5b64ac",
+        "statusBarItem.remoteBackground": "#7d84bd",
         "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#8aefd0",
+        "titleBar.activeBackground": "#7d84bd",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#8aefd099",
+        "titleBar.inactiveBackground": "#7d84bd99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#8aefd0"
+    "peacock.color": "#7d84bd"
 }
