--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.6.10",
     "firebase": "^9.17.1",
     "ionicons": "^6.0.3",
+    "ngx-pipes": "^3.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
