--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,5 @@
         "titleBar.inactiveBackground": "#7d84bd99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#7d84bd"
+    "peacock.color": "#4976e4"
 }
