--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#9fa4ce",
-        "activityBar.background": "#9fa4ce",
+        "activityBar.activeBackground": "#7597eb",
+        "activityBar.background": "#7597eb",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#f4eaeb",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#9fa4ce",
-        "statusBar.background": "#7d84bd",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#5b64ac",
-        "statusBarItem.remoteBackground": "#7d84bd",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#7d84bd",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#7d84bd99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#c31c4c",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#7597eb",
+        "statusBar.background": "#4976e4",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#7597eb",
+        "statusBarItem.remoteBackground": "#4976e4",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#4976e4",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#4976e499",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
     "peacock.color": "#4976e4"
 }
