--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ionicons": "^6.0.3",
     "ngx-pipes": "^3.2.0",
     "rxjs": "~7.5.0",
+    "swiper": "^9.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
