--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,5 @@
         "titleBar.inactiveBackground": "#4976e499",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#4976e4"
+    "peacock.color": "#1ab2f4"
 }
