--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#7597eb",
-        "activityBar.background": "#7597eb",
+        "activityBar.activeBackground": "#979bc8",
+        "activityBar.background": "#979bc8",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#c31c4c",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#7597eb",
-        "statusBar.background": "#4976e4",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#7597eb",
-        "statusBarItem.remoteBackground": "#4976e4",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#4976e4",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#4976e499",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "activityBarBadge.background": "#f4eaeb",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#979bc8",
+        "statusBar.background": "#757bb7",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#555ca4",
+        "statusBarItem.remoteBackground": "#757bb7",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#757bb7",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#757bb799",
+        "titleBar.inactiveForeground": "#15202b99"
     },
     "peacock.color": "#1ab2f4"
 }
